--- a/app/src/main/res/layout/activity_user_path.xml
+++ b/app/src/main/res/layout/activity_user_path.xml
@@ -6,4 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".UserPathActivity">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/userPathRecycler"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginVertical="5dp">
+
+    </androidx.recyclerview.widget.RecyclerView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
