--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -17,7 +17,7 @@
             android:id="@+id/editText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="어디로 떠나실래요?" />
+            android:hint="장소를 입력하세요" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -34,6 +34,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="경로 보기" />
+            <Button
+                android:id="@+id/bt_pathsave"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="경로 저장" />
         </LinearLayout>
 
     </LinearLayout>
