--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,13 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     tools:context=".LoginActivity">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/santo"
-        android:scaleType="centerCrop"/>
 
 
 
@@ -54,6 +50,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
             android:hint="Log in"
+            android:backgroundTint="@color/colorPrimaryDark"
             android:layout_centerVertical="true" />
 
 
@@ -65,6 +62,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
             android:layout_centerVertical="true"
+            android:backgroundTint="@color/colorPrimaryDark"
             android:hint="signup"
             android:layout_below="@id/login"/>
 
