--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,19 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UserPlaceActivity">
+    tools:context=".SplashActivity">
 
-
-    <androidx.recyclerview.widget.RecyclerView
+    <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/userPlaceRecycler"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="5dp">
-
-    </androidx.recyclerview.widget.RecyclerView>
-
-
-
+        android:scaleType="centerCrop"
+        android:id="@+id/splash"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
