--- a/app/src/main/res/layout/activity_user_place.xml
+++ b/app/src/main/res/layout/activity_user_place.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimaryDark"
     tools:context=".UserPlaceActivity">
 
 
@@ -11,8 +12,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/userPlaceRecycler"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="5dp">
+        android:background="@drawable/rounded"
+        android:layout_marginTop="30dp"
+        android:paddingHorizontal="20dp"
+        android:paddingTop="10dp">
 
     </androidx.recyclerview.widget.RecyclerView>
 
