--- a/app/src/main/res/layout/userpath_item.xml
+++ b/app/src/main/res/layout/userpath_item.xml
@@ -10,7 +10,8 @@
         android:layout_height="wrap_content"
         app:cardCornerRadius="4dp"
         app:cardElevation="8dp"
-        android:layout_marginBottom="12dp"
+        app:cardBackgroundColor="@color/colorSplash"
+        android:layout_marginBottom="5dp"
         android:layout_marginHorizontal="10dp">
 
         <LinearLayout
@@ -35,6 +36,7 @@
                 android:layout_weight="4"
                 android:layout_gravity="center_horizontal|center"
                 android:gravity="center"
+                android:textColor="@color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
@@ -46,6 +48,8 @@
                 android:gravity="center"
                 android:layout_gravity="center_horizontal|center"
                 android:layout_width="wrap_content"
+                android:textColor="@color/black"
+
                 android:layout_height="wrap_content"/>
 
             <TextView
