--- a/app/src/main/res/layout/userplaces_item.xml
+++ b/app/src/main/res/layout/userplaces_item.xml
@@ -2,58 +2,47 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="horizontal"
+>
 
-
-<androidx.cardview.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="4dp"
-        app:cardElevation="8dp"
-        android:layout_marginBottom="12dp"
-        android:layout_marginHorizontal="10dp">
+        android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:orientation="horizontal"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp">
+        <ImageView
+            android:id="@+id/placeImg"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:src="@drawable/line"/>
 
-            <ImageView
-                android:id="@+id/placeImg"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/custom_email_icon"/>
-
-            <TextView
-                android:id="@+id/placename"
-                android:text="장소"
-                android:textStyle="bold"
-                android:textSize="20sp"
-                android:layout_weight="4"
-                android:layout_gravity="center_horizontal|center"
-                android:gravity="center"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/placename"
+            android:text="장소"
+            android:textStyle="bold"
+            android:textSize="30sp"
+            android:layout_weight="4"
+            android:layout_gravity="center_horizontal|center"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
 
 
-            <TextView
-                android:id="@+id/more"
-                android:text="더보기"
-                android:textSize="16sp"
-                android:layout_weight="1"
-                android:gravity="end"
-                android:layout_gravity="center_horizontal|center"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/more"
+            android:text="더보기"
+            android:textSize="16sp"
+            android:layout_weight="1"
+            android:gravity="end"
+            android:layout_gravity="center_horizontal|center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
 
 
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
 </LinearLayout>
