--- a/app/src/main/res/layout/activity_user_place.xml
+++ b/app/src/main/res/layout/activity_user_place.xml
@@ -16,7 +16,13 @@
 
     </androidx.recyclerview.widget.RecyclerView>
 
-
+    <Button
+        android:id="@+id/bt_toPathMap"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="지도로 코스 보기"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
