--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:map="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -70,20 +70,28 @@
         android:layout_marginEnd="30dp"
         tools:ignore="MissingConstraints"
         android:backgroundTint="@color/white"
+        app:rippleColor="@android:color/white"
+        app:borderWidth="0dp"
+        app:elevation="0dp"
+        app:pressedTranslationZ="0dp"
         android:src="@drawable/ic_baseline_account_circle_24"
         android:id="@+id/toProfile"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="20dp"
         android:layout_marginStart="30dp"
         tools:ignore="MissingConstraints"
         android:backgroundTint="@color/white"
+        app:rippleColor="@android:color/white"
+        app:borderWidth="0dp"
+        app:elevation="0dp"
+        app:pressedTranslationZ="0dp"
         android:src="@drawable/ic_baseline_collections_bookmark_24"
+
         android:id="@+id/toSearch"/>
 
 
