--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -74,6 +74,7 @@
         app:borderWidth="0dp"
         app:elevation="0dp"
         app:pressedTranslationZ="0dp"
+        app:tint="@null"
         android:src="@drawable/ic_baseline_account_circle_24"
         android:id="@+id/toProfile"/>
 
@@ -86,13 +87,49 @@
         android:layout_marginStart="30dp"
         tools:ignore="MissingConstraints"
         android:backgroundTint="@color/white"
-        app:rippleColor="@android:color/white"
         app:borderWidth="0dp"
         app:elevation="0dp"
         app:pressedTranslationZ="0dp"
+        app:tint="@null"
         android:src="@drawable/ic_baseline_collections_bookmark_24"
-
         android:id="@+id/toSearch"/>
+
+<!--    <com.ogaclejapan.arclayout.ArcLayout-->
+<!--        android:id="@id/arc"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        app:arc_color="@color/colorSplash"-->
+<!--        app:arc_freeAngle="true"-->
+<!--        app:arc_origin="center"-->
+<!--        >-->
+
+<!--        <Button-->
+<!--            android:text="A"-->
+<!--            android:arc_angle="-45"-->
+<!--            />-->
+
+<!--        <Button-->
+<!--            android:text="B"-->
+<!--            android:arc_angle="-15"-->
+<!--            />-->
+
+<!--        <Button-->
+<!--            android:text="C"-->
+<!--            android:arc_angle="15"-->
+<!--            />-->
+
+<!--        <Button-->
+<!--            android:text="D"-->
+<!--            android:arc_angle="45"-->
+<!--            />-->
+
+<!--        <Button-->
+<!--            style="@style/Item.Large"-->
+<!--            android:text="E"-->
+<!--            android:arc_angle="180"-->
+<!--            />-->
+
+<!--    </com.ogaclejapan.arclayout.ArcLayout>-->
 
 
 
