--- a/app/src/main/res/layout/activity_user_place.xml
+++ b/app/src/main/res/layout/activity_user_place.xml
@@ -19,13 +19,32 @@
 
     </androidx.recyclerview.widget.RecyclerView>
 
-    <Button
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/bt_toPathMap"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="지도로 코스 보기"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:backgroundTint="@color/colorPrimaryDark"
+        android:src="@drawable/ic_baseline_map_24"
+        app:borderWidth="0dp"
+        app:elevation="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:pressedTranslationZ="0dp"
+        app:tint="@null"
+        tools:ignore="MissingConstraints" />
+
+    <!--    <Button-->
+<!--        android:id="@+id/bt_toPathMap"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="지도로 코스 보기"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent" />-->
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
