--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -44,8 +44,9 @@
             android:id="@+id/emailEdit"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_margin="8dp"
-            android:hint="Enter email"
+            android:layout_marginVertical="4dp"
+            android:layout_marginHorizontal="3dp"
+            android:hint="이메일"
             android:ems="20"
             android:inputType="textEmailAddress"
             android:background="@drawable/custom_input"
@@ -58,8 +59,9 @@
             android:id="@+id/passwordEdit"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_margin="8dp"
-            android:hint="Enter password"
+            android:layout_marginVertical="4dp"
+            android:layout_marginHorizontal="2dp"
+            android:hint="비밀번호"
             android:ems="20"
             android:background="@drawable/custom_input"
             android:drawableLeft="@drawable/custom_http_icon"
@@ -72,10 +74,11 @@
         <Button
             android:id="@+id/login"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_margin="4dp"
-            android:hint="Log in"
-            android:backgroundTint="@color/colorPrimary"
+            android:layout_height="45dp"
+            android:layout_marginHorizontal="2dp"
+            android:text="로그인"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/quantum_greyblack1000"
             android:layout_centerVertical="true" />
 
 
@@ -84,11 +87,14 @@
         <Button
             android:id="@+id/bt_finalsavepath"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_margin="4dp"
+            android:layout_height="45dp"
+            android:layout_margin="2dp"
             android:layout_centerVertical="true"
-            android:backgroundTint="@color/colorPrimary"
-            android:hint="signup"
+            android:backgroundTint="@color/quantum_greyblack1000"
+            android:text="회원가입"
+            android:textColor="@color/white"
+            android:textStyle="normal"
+
             android:layout_below="@id/login"/>
 
     </RelativeLayout>
