--- a/app/src/main/res/layout/activity_place_detail.xml
+++ b/app/src/main/res/layout/activity_place_detail.xml
@@ -16,11 +16,87 @@
     android:background="@android:color/white"
     android:orientation="vertical">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:elevation="4dp"
         android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/text1"
+            android:layout_width="wrap_content"
+            android:layout_height="56dp"
+            android:gravity="center_vertical"
+            android:layout_marginTop="10dp"
+            android:layout_alignParentTop="true"
+            android:text='" '
+            android:textColor="@android:color/black"
+            android:textSize="19sp"
+            android:layout_toLeftOf="@id/title"/>
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="56dp"
+            android:gravity="center_vertical"
+            android:layout_marginTop="10dp"
+            android:layout_alignParentTop="true"
+            android:text="Title"
+            android:textColor="@android:color/black"
+            android:textSize="22sp"
+            android:layout_toLeftOf="@id/text2"/>
+
+        <TextView
+            android:id="@+id/text2"
+            android:layout_width="wrap_content"
+            android:layout_height="56dp"
+            android:gravity="center_vertical"
+            android:layout_marginTop="10dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginRight="@dimen/item_margin_horizontal"
+            android:text=' "'
+            android:textColor="@android:color/black"
+            android:textSize="19sp"
+            android:layout_alignParentRight="true"/>
+
+        <TextView
+            android:id="@+id/region"
+            android:layout_width="wrap_content"
+            android:layout_height="56dp"
+            android:gravity="center_vertical"
+            android:paddingLeft="@dimen/item_margin_horizontal"
+            android:text="region"
+            android:textColor="@android:color/black"
+            android:layout_marginTop="-20dp"
+            android:textSize="20sp"
+            android:layout_below="@id/title"
+            android:layout_toLeftOf="@id/address"/>
+
+        <TextView
+            android:id="@+id/address"
+            android:layout_width="wrap_content"
+            android:layout_height="56dp"
+            android:gravity="center_vertical"
+            android:paddingLeft="10dp"
+            android:text="address"
+            android:textColor="@android:color/black"
+            android:textSize="20sp"
+            android:layout_marginTop="-20dp"
+            android:layout_below="@id/title"
+            android:layout_toLeftOf="@id/text4"/>
+
+        <TextView
+            android:id="@+id/text4"
+            android:layout_width="wrap_content"
+            android:layout_height="56dp"
+            android:gravity="center_vertical"
+            android:text="에서의 추억"
+            android:textColor="@android:color/black"
+            android:textSize="20sp"
+            android:layout_marginTop="-20dp"
+            android:layout_below="@id/title"
+            android:layout_marginRight="@dimen/item_margin_horizontal"
+            android:layout_alignParentRight="true"/>
 
         <Button
             android:id="@+id/zhihu"
@@ -30,49 +106,31 @@
             android:layout_marginTop="8dp"
             android:layout_marginRight="@dimen/item_margin_horizontal"
             android:minHeight="56dp"
-            android:text="Zhihu"
+            android:text="사진 추가"
             android:textAllCaps="false"
             android:textColor="@android:color/white"
-            android:theme="@style/ZhihuOverlay" />
+            android:theme="@style/ZhihuOverlay"
+            android:layout_below="@id/address"/>
 
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="match_parent"
-            android:layout_height="56dp"
-            android:gravity="center_vertical"
-            android:paddingLeft="@dimen/item_margin_horizontal"
-            android:text="Title"
-            android:textColor="@android:color/black"
-            android:textSize="22sp" />
-        <TextView
-            android:id="@+id/region"
-            android:layout_width="match_parent"
-            android:layout_height="56dp"
-            android:gravity="center_vertical"
-            android:paddingLeft="@dimen/item_margin_horizontal"
-            android:text="region"
-            android:textColor="@android:color/black"
-            android:textSize="22sp" />
-        <TextView
-            android:id="@+id/address"
-            android:layout_width="match_parent"
-            android:layout_height="56dp"
-            android:gravity="center_vertical"
-            android:paddingLeft="@dimen/item_margin_horizontal"
-            android:text="address"
-            android:textColor="@android:color/black"
-            android:textSize="22sp" />
-    </LinearLayout>
+    </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/list_bg"
+        android:background="@color/white"
         android:clipChildren="false"
         android:clipToPadding="false"
         android:paddingTop="16dp"
         android:paddingBottom="16dp">
+
+<!--        <TextView-->
+<!--            android:id="@+id/empty_view"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:gravity="center"-->
+<!--            android:visibility="gone"-->
+<!--            android:text="이미지가 없습니다." />-->
 
     </androidx.recyclerview.widget.RecyclerView>
 
