--- a/app/src/main/res/layout/uri_item.xml
+++ b/app/src/main/res/layout/uri_item.xml
@@ -24,8 +24,7 @@
     <ImageView
         android:id="@+id/iv"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        app:srcCompat="@drawable/santo"/>
+        android:layout_height="400dp" />
 
 
 </LinearLayout>
