--- a/app/src/main/res/layout/userpath_item.xml
+++ b/app/src/main/res/layout/userpath_item.xml
@@ -1,32 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-<androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="4dp"
         app:cardElevation="8dp"
-        app:cardBackgroundColor="@color/colorSplash"
-        android:layout_marginBottom="5dp"
-        android:layout_marginHorizontal="10dp">
+        android:layout_gravity="center"
+        android:layout_marginVertical="5dp"
+        android:layout_marginHorizontal="5dp">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:id="@+id/pathImg"
+            android:src="@drawable/whale2"
+            />
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:orientation="horizontal"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp">
+            android:orientation="vertical"
+            android:layout_marginTop="110dp"
+            android:gravity="center"
+            android:layout_gravity="center_horizontal"
+            >
 
-            <ImageView
-                android:id="@+id/pathImg"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/custom_email_icon"/>
 
             <TextView
                 android:id="@+id/pathTitle"
@@ -61,9 +64,6 @@
                 android:layout_gravity="center_horizontal|center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
-
-
-
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
