--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,11 +30,17 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
-    <style name="Item.Large">
-        <item name="android:layout_width">@dimen/item_circle_size_large</item>
-        <item name="android:layout_height">@dimen/item_circle_size_large</item>
-        <item name="android:textSize">@dimen/item_font_size_large</item>
+    <style name="Item.Small">
+        <item name="android:layout_width">@dimen/item_circle_size_small</item>
+        <item name="android:layout_height">@dimen/item_circle_size_small</item>
     </style>
+
+    <style name="Item.Middle">
+        <item name="android:layout_width">@dimen/item_circle_size_medium</item>
+        <item name="android:layout_height">@dimen/item_circle_size_medium</item>
+    </style>
+
+
 
 
 </resources>
