--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,14 +37,14 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingHorizontal="80dp"
+        android:paddingHorizontal="25dp"
         android:layout_marginTop="240dp">
 
         <EditText
             android:id="@+id/emailEdit"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_marginVertical="4dp"
+            android:layout_marginBottom="11dp"
             android:layout_marginHorizontal="3dp"
             android:hint="이메일"
             android:ems="20"
@@ -59,7 +59,7 @@
             android:id="@+id/passwordEdit"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_marginVertical="4dp"
+            android:layout_marginBottom="5dp"
             android:layout_marginHorizontal="2dp"
             android:hint="비밀번호"
             android:ems="20"
@@ -77,6 +77,7 @@
             android:layout_height="45dp"
             android:layout_marginHorizontal="2dp"
             android:text="로그인"
+
             android:textColor="@color/white"
             android:backgroundTint="@color/quantum_greyblack1000"
             android:layout_centerVertical="true" />
@@ -88,12 +89,12 @@
             android:id="@+id/bt_finalsavepath"
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:layout_margin="2dp"
             android:layout_centerVertical="true"
             android:backgroundTint="@color/quantum_greyblack1000"
             android:text="회원가입"
             android:textColor="@color/white"
             android:textStyle="normal"
+            android:layout_marginHorizontal="2dp"
 
             android:layout_below="@id/login"/>
 
