--- a/app/src/main/res/layout/userpath_item.xml
+++ b/app/src/main/res/layout/userpath_item.xml
@@ -13,12 +13,20 @@
         android:layout_marginVertical="5dp"
         android:layout_marginHorizontal="5dp">
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
+<!--        <ImageView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="200dp"-->
+<!--            android:id="@+id/pathImg"-->
+<!--            android:src="@drawable/whale2"-->
+<!--            />-->
+        <com.gjiazhe.panoramaimageview.PanoramaImageView
             android:id="@+id/pathImg"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
             android:src="@drawable/whale2"
-            />
+            app:piv_enablePanoramaMode="true"
+            app:piv_show_scrollbar="true"
+            app:piv_invertScrollDirection="false" />
 
 
         <LinearLayout
