--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -39,4 +39,7 @@
     <dimen name="item_font_size_small">16sp</dimen>
     <dimen name="item_font_size_tumblr">30sp</dimen>
     <dimen name="item_font_size_path">18sp</dimen>
+
+    <dimen name="item_height">80dp</dimen>
+    <dimen name="item_padding">16dp</dimen>
 </resources>
