--- a/app/src/main/res/layout/activity_user_place.xml
+++ b/app/src/main/res/layout/activity_user_place.xml
@@ -7,6 +7,7 @@
     android:background="@color/colorPrimaryDark"
     tools:context=".UserPlaceActivity">
 
+
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -24,13 +25,50 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/userPlaceRecycler"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="100dp"
         android:paddingHorizontal="20dp"
         android:paddingTop="10dp">
-
-
-
     </androidx.recyclerview.widget.RecyclerView>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <Button
+            android:id="@+id/zhihu"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginRight="5dp"
+            android:minHeight="56dp"
+            android:text="대표 사진 설정"
+            android:layout_weight="1"
+            android:textAllCaps="false"
+            android:textColor="@android:color/white"
+            android:theme="@style/ZhihuOverlay"
+            android:layout_below="@id/address"/>
+
+        <Button
+            android:id="@+id/deletePic"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="8dp"
+            android:layout_weight="1"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="15dp"
+            android:minHeight="56dp"
+            android:text="사진 삭제"
+            android:textAllCaps="false"
+            android:textColor="@android:color/white"
+            android:theme="@style/ZhihuOverlay"
+            android:layout_below="@id/address"/>
+
+    </LinearLayout>
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -52,12 +90,12 @@
         tools:ignore="MissingConstraints" />
 
     <!--    <Button-->
-<!--        android:id="@+id/bt_toPathMap"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="지도로 코스 보기"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent" />-->
+    <!--        android:id="@+id/bt_toPathMap"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:text="지도로 코스 보기"-->
+    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent" />-->
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
