--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -39,8 +39,8 @@
         android:orientation="horizontal">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
             android:orientation="horizontal"
             android:id="@+id/selected"
             android:layout_weight="4"
@@ -79,13 +79,20 @@
             android:layout_gravity="center_vertical"/>
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal|center"
+            android:layout_gravity="center"
             android:layout_margin="10dp"
             android:gravity="center"
             android:text="About Me"
             android:id="@+id/friendname"
+            android:textSize="20sp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="About Me"
+            android:id="@+id/friendemail"
             android:textSize="20sp" />
 
 
