--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<com.mxn.soul.flowingdrawer_core.FlowingDrawer
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawerlayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:clipChildren="false"
+    android:clipToPadding="false"
+    app:edPosition="1"
+    app:edMenuSize="260dp"
+    app:edMenuBackground="#FFFFFF">
+    <!--content-->
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorSplash"
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/whale"
+            android:layout_centerInParent="true"
+            android:id="@+id/mainpic"/>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/toMap"
+                android:layout_marginTop="70dp"
+                android:layout_marginHorizontal="30dp"
+                app:cardCornerRadius="43dp"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_centerVertical="true"
+                tools:ignore="MissingConstraints">
+
+                <EditText
+                    android:id="@+id/editTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:hint="여행 제목"
+                    android:textSize="20sp"
+                    android:layout_gravity="center_vertical|top"
+                    android:gravity="center_vertical"/>
+
+                <EditText
+                    android:id="@+id/editPlace"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:hint="어디로 떠나고 싶으신가요?"
+                    android:textSize="20sp"
+                    android:layout_gravity="center_vertical|center"
+                    android:gravity="center_vertical"/>
+
+                //몇명인가
+
+                <Button
+                    android:id="@+id/placeBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="으로 떠나기"
+                    android:layout_gravity="bottom|center_vertical"
+                    android:layout_marginBottom="20dp"
+                    />
+
+            </androidx.cardview.widget.CardView>
+    </RelativeLayout>
+
+    <com.mxn.soul.flowingdrawer_core.FlowingMenuLayout
+        android:id="@+id/menulayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <FrameLayout
+            android:id="@+id/containermenu"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <include
+                layout="@layout/drawer"/>
+
+        </FrameLayout>
+
+    </com.mxn.soul.flowingdrawer_core.FlowingMenuLayout>
+
+</com.mxn.soul.flowingdrawer_core.FlowingDrawer>
+
+<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--    xmlns:tools="http://schemas.android.com/tools"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="match_parent"-->
+<!--    tools:context=".MainActivity">-->
+
+
+<!--    -->
+
 
 
 
@@ -35,73 +131,26 @@
 
 
 
-<!--    <androidx.cardview.widget.CardView-->
-<!--        android:id="@+id/toMap"-->
-<!--        android:layout_marginTop="70dp"-->
-<!--        android:layout_marginHorizontal="30dp"-->
-<!--        app:cardCornerRadius="43dp"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="200dp"-->
-<!--        android:layout_centerVertical="true"-->
-<!--        tools:ignore="MissingConstraints">-->
-
-<!--        <EditText-->
-<!--            android:id="@+id/editPlace"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_margin="10dp"-->
-<!--            android:hint="어디로 떠나고 싶으신가요?"-->
-<!--            android:textSize="20sp"-->
-<!--            android:layout_gravity="center_horizontal|center"-->
-<!--            android:gravity="center"/>-->
-
-<!--        <Button-->
-<!--            android:id="@+id/placeBtn"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="으로 떠나기"-->
-<!--            android:layout_gravity="bottom|center_horizontal"-->
-<!--            android:layout_marginBottom="20dp"-->
-<!--            />-->
-
-<!--    </androidx.cardview.widget.CardView>-->
-
-<!--        <androidx.cardview.widget.CardView-->
-<!--            android:id="@+id/toProfile"-->
-<!--            android:layout_width="200dp"-->
-<!--            android:layout_height="200dp"-->
-<!--            android:layout_margin="30dp"-->
-<!--            app:cardCornerRadius="43dp"-->
-<!--            android:layout_centerHorizontal="true"-->
-<!--            tools:ignore="MissingConstraints">-->
-
-<!--            <TextView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_gravity="center_horizontal|center"-->
-<!--                android:layout_margin="10dp"-->
-<!--                android:gravity="center"-->
-<!--                android:text="About Me"-->
-<!--                android:textSize="20sp" />-->
-
-<!--        </androidx.cardview.widget.CardView>-->
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/whalehome"
-        android:layout_centerInParent="true"
-        android:id="@+id/mainpic"/>
-
-    <!-- this view reveals when swipe right -->
-
-<!--    <androidx.recyclerview.widget.RecyclerView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:id="@+id/main_recycler"/>-->
 
 
+    <!--        <androidx.cardview.widget.CardView-->
+    <!--            android:id="@+id/toProfile"-->
+    <!--            android:layout_width="200dp"-->
+    <!--            android:layout_height="200dp"-->
+    <!--            android:layout_margin="30dp"-->
+    <!--            app:cardCornerRadius="43dp"-->
+    <!--            android:layout_centerHorizontal="true"-->
+    <!--            tools:ignore="MissingConstraints">-->
 
+    <!--            <TextView-->
+    <!--                android:layout_width="match_parent"-->
+    <!--                android:layout_height="wrap_content"-->
+    <!--                android:layout_gravity="center_horizontal|center"-->
+    <!--                android:layout_margin="10dp"-->
+    <!--                android:gravity="center"-->
+    <!--                android:text="About Me"-->
+    <!--                android:textSize="20sp" />-->
 
+    <!--        </androidx.cardview.widget.CardView>-->
 
-</RelativeLayout>
+<!--</RelativeLayout>-->
